/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package Ejercicio32_Hoteles.Enumeraciones;

/**
 *
 * @author altoc
 */
public enum RolUsuario {
      ADMINISTRADOR,
      RECEPCIONISTA
}
