@startuml
left to right direction

'--------------- CLASES CONCEPTUALES ---------------
class Usuario {
  - String codigo;
  - String password;
  - String nombre;
  - String apellido;
  - String dni;
  - RolUsuario rol;
  - String email;
  + Usuario()
  + String getCodigo()
  + void setCodigo(String codigo)
}

class Hotel {
  - int hotelId;
  - String nombreHotel;
  - int categoriaEstrella;
  - String direccion;
  - String telefonoContacto;
  - List<Empleado> empleados;
  - List<Habitacion> habitaciones;
  - List<Reserva> reservasRecibidas;
  - List<Suplemento> suplementos;
  - List<Actividad> actividades;
  + Hotel()
  + int getHotelId()
  + void setHotelId(int hotelId)
}

class Empleado {
  - int empleadoId;
  - String segundoNombre;
  - String segundoApellido;
  - String cargo;
  - float salario;
  - RolEmpleado rol;
  - List<Actividad> actividadesLideradas;
}

class Habitacion {
  - int habitacionId;
  - int numeroHabitacion;
  - TipoHabitacion tipoHabitacion;
  - double precioNoche;
  - String estado;
  - int hotelId;
}

class Cliente {
  - int clienteId;
  - String dni;
  - String nombre;
  - String apellido;
  - String telefono;
  - String correoElectronico;
  - String direccion;
  - List<Reserva> reservas;
  - List<Estancia> estancias;
  - List<Actividad> actividadesParticipadas;
}

class Reserva {
  - int reservaId;
  - LocalDateTime fechaReserva;
  - Date fechaEntrada;
  - Date fechaSalida;
  - String estado;
  - int clienteId;
  - int hotelId;
  - Factura factura;
}

class Estancia {
  - int estanciaId;
  - Date fechaInicioEstancia;
  - Date fechaFinEstancia;
  - int numeroPersonas;
  - List<Habitacion> habitaciones;
  - List<Suplemento> suplementos;
}

class Suplemento {
  - int suplementoId;
  - TipoSuplemento tipoSuplemento;
  - String descripcion;
  - float monto;
  - Date fechaInicio;
  - Date fechaFin;
  - int hotelId;
}

class Actividad {
  - int actividadId;
  - NombreActividad nombreActividad;
  - String horario;
  - String descripcion;
  - String tipoActividad;
  - float precioPersona;
  - List<Cliente> clientesParticipantes;
}

class Factura {
  - int facturaId;
  - int reservaId;
  - Date fechaEmision;
  - int diasEstancia;
  - double precioTotalHabitaciones;
  - double precioTotalSuplementos;
  - double precioTotalActividades;
  - double precioTotalFinal;
}

'--------------- ROLES Y OPERACIONES ---------------
Usuario --> Hotel : crea/gestiona [ADMINISTRADOR]
Usuario --> Habitacion : define [ADMINISTRADOR]
Usuario --> Empleado : registra [ADMINISTRADOR]
Usuario --> Suplemento : configura [ADMINISTRADOR]
Usuario --> Actividad : organiza [ADMINISTRADOR]

Usuario --> Cliente : registra [RECEPCIONISTA]
Usuario --> Reserva : crea [RECEPCIONISTA]
Usuario --> Estancia : establece [RECEPCIONISTA]
Usuario --> Factura : emite [RECEPCIONISTA]
Usuario --> Suplemento : asigna a cliente [RECEPCIONISTA]
Usuario --> Actividad : registra participación [RECEPCIONISTA]

'--------------- RELACIONES ENTRE CLASES ---------------
Hotel "1" -- "0..*" Habitacion : tiene
Hotel "1" -- "0..*" Empleado : emplea
Hotel "1" -- "0..*" Reserva : recibe
Hotel "1" -- "0..*" Suplemento : ofrece
Hotel "1" -- "0..*" Actividad : organiza

Empleado "1" -- "0..*" Actividad : lidera

Reserva "1" -- "1" Factura : genera
Reserva "1" -- "0..1" Estancia : crea
Cliente "1" -- "0..*" Reserva : realiza
Cliente "1" -- "0..*" Estancia : disfruta
Cliente "0..*" -- "0..*" Actividad : participa

Estancia "1" -- "1..*" Habitacion : ocupa
Estancia "0..*" -- "0..*" Suplemento : incluye

'--------------- ENUMERACIONES ---------------
enum RolUsuario {
    ADMINISTRADOR
    RECEPCIONISTA
}

enum RolEmpleado {
    GERENTE
    RECEPCIONISTA
    CONSEJE
    VIGILANTE
    ASEADOR
    COCINERO
    MANTENIMIENTO
    LAVANDERO
    ENTRENADOR
    GUIA
    COORDINADOR_EVENTOS
    TERAPEUTA
    INSTRUCTOR_YOGA
}

enum TipoSuplemento {
    VISTA_AL_MAR
    CAMA_EXTRA
    DESAYUNO
    MEDIA_PENSION
    PENSION_COMPLETA
    ACCESOS_PRIVADOS
    TRASLADOS
    MASCOTAS
    USO_SALONES
}

enum NombreActividad {
    CLASE_YOGA
    EXCURSION_GUIADA
    CATA_VINOS
    TALLER_COCINA
    ANIMACION_INFANTIL
    FIESTA_TEMATICA
    PASEO_BICI
    SPA_TERAPIA
    ENTRENAMIENTO_FUNCIONAL
}

enum TipoHabitacion {
    INDIVIDUAL
    DOBLE
    MATRIMONIAL
    SUITE
    FAMILIAR
    DELUXE
    PRESIDENTIAL
}
@enduml
